tests/paczka1/fuzzy1/16905613.err
Error in line 11: UJkutwxkl A181 48,81
Error in line 15: qYlP S54 94,1
Error in line 20: GkXATVuOD S54 131,0
Error in line 31: GkXATVuOD A181 21,1
Error in line 33: GkXATVuOD A330 70,7
